# fastapi-hello-world

./: .dockerignore  Dockerfile  README.md  dev.Dockerfile  main.py  okteto.sh  okteto.yml  pyproject.toml
chart/: values.yaml
hello_world/: hello.py
